--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@air/react-drag-to-select": "^5.0.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "react-scripts": "^5.0.1",
     "sass": "^1.62.1",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,6 +48,7 @@
   },
   "devDependencies": {
     "@types/jquery": "^3.5.16",
-    "@types/jqueryui": "^1.12.16"
+    "@types/jqueryui": "^1.12.16",
+    "@types/uuid": "^9.0.2"
   }
 }
