--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery-ui-bundle": "^1.12.1-migrate",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.3.4",
     "react-scripts": "^5.0.1",
     "sass": "^1.62.1",
     "typescript": "^4.9.5",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@types/jquery": "^3.5.16",
     "@types/jqueryui": "^1.12.16",
+    "@types/react-grid-layout": "^1.3.2",
     "@types/uuid": "^9.0.2"
   }
 }
