--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "sass": "^1.62.1",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xp.css": "^0.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
